# binge

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  manifest.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  extract.rs  gh.rs  main.rs  manifest.rs
