[package]
name = "binge"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
clap_complete = "4.5.47"
flate2 = "1.1.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
futures-lite = "2.6.0"
liblzma = { version = "0.4.1", features = ["static"] }
owo-colors = "4.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.19", default-features = false, features = ["brotli", "http2", "json", "rustls-tls-native-roots", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.22"
xdg = "3.0.0"
zip = "4.0.0"
zstd = "0.13.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
enum_glob_use = "deny"
if_not_else = "deny"
items_after_statements = "deny"
missing_errors_doc = "allow"
mut_mut = "deny"
panic = "deny"
similar_names = "deny"
unicode_not_nfc = "deny"
unwrap_used = "deny"
used_underscore_binding = "deny"
