[package]
name = "binge"
version = "0.2.2"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1.0.97"
astral-tokio-tar = "0.6.1"
async-compression = { version = "0.4.42", default-features = false, features = ["tokio", "xz", "zstd", "gzip"] }
async_zip = { version = "0.0.18", default-features = false, features = ["tokio", "deflate"] }
clap = { version = "4.5.34", features = ["derive"] }
clap_complete = "4.5.47"
futures-lite = "2.6.0"
owo-colors = "4.2.0"
regex = "1.11.1"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "http2", "json", "rustls", "stream", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
strides = { version = "0.1.0" }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1"
xdg = "3.0.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
enum_glob_use = "deny"
if_not_else = "deny"
items_after_statements = "deny"
missing_errors_doc = "allow"
mut_mut = "deny"
panic = "deny"
similar_names = "deny"
unicode_not_nfc = "deny"
unwrap_used = "deny"
used_underscore_binding = "deny"
